terraform/minikube/modules/express_server/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "reactory-express-server-gateway"
  namespace: reactory
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 4000
      name: express
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactory-express-server-gateway
  namespace: reactory
spec:
  hosts:
  - "*"
  gateways:
  - reactory-express-gateway
  tcp:
  - match:
    - port: 4000
    route:
    - destination:
        host: reactory-express-server
        port:
          number: 4000
